Sends events of surrounding text changed to IME not only when the caret bounds are changed but also when the selection is changed.

Bug: 898442
Change-Id: I927171f7ded54cad1626e367a33a900e90adc8f4
Reviewed-on: https://chromium-review.googlesource.com/c/1319211
Commit-Queue: Shu Chen <shuchen@chromium.org>
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Cr-Commit-Position: refs/heads/master@{#608229}
Former-commit-id: 6d50e57f4c1abb74274b9564816d7415a0a67652